data organization and ai query stub

--- a/get_wiki_article.ipynb
+++ b/get_wiki_article.ipynb
@@ -2,33 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fa21e57d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/yf/n23w_6ys7gq5ng7vbsvdsz500000gn/T/ipykernel_91489/1419924216.py:18: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
-      "  df = pd.read_html(str(table))[0]\n",
-      "Fetching intros: 100%|██████████| 1/1 [00:00<00:00,  2.09it/s]"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows before dedupe: 1, after dedupe: 1 (unique symbols)\n",
-      "✅ Exported 1 rows to sp500_wiki_intros_full.csv\n",
-      "Unique symbols: 1\n"
+      "🟢 [Step 1] Starting: Fetching S&P 500 companies table from Wikipedia...\n",
+      "✅ Wikipedia page fetched successfully.\n",
+      "✅ [Step 1 Complete] Retrieved S&P 500 table with 503 entries in 0.37s.\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "/var/folders/yf/n23w_6ys7gq5ng7vbsvdsz500000gn/T/ipykernel_91800/2082349891.py:25: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  df = pd.read_html(str(table))[0]\n"
      ]
     }
    ],
@@ -36,45 +29,87 @@
     "import requests\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
-    "from tqdm import tqdm\n",
     "import time\n",
     "import csv\n",
     "\n",
-    "N = 1 # How many companies to process; set to a higher number for full run\n",
+    "N = 1  # How many companies to process; set higher for full run\n",
     "\n",
-    "# Step 1: Get S&P 500 companies table\n",
+    "print(\"🟢 [Step 1] Starting: Fetching S&P 500 companies table from Wikipedia...\")\n",
+    "start_time = time.time()\n",
+    "\n",
     "url = \"https://en.wikipedia.org/wiki/List_of_S%26P_500_companies\"\n",
     "headers = {\"User-Agent\": \"Mozilla/5.0 (compatible; sp500-fetcher/2.0; +https://example.com)\"}\n",
-    "resp = requests.get(url, headers=headers, timeout=20)\n",
-    "resp.raise_for_status()\n",
+    "\n",
+    "try:\n",
+    "    resp = requests.get(url, headers=headers, timeout=20)\n",
+    "    resp.raise_for_status()\n",
+    "    print(\"✅ Wikipedia page fetched successfully.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error fetching page: {e}\")\n",
+    "    raise\n",
     "\n",
     "soup = BeautifulSoup(resp.text, \"html.parser\")\n",
     "table = soup.find(\"table\", {\"class\": \"wikitable\"})\n",
-    "df = pd.read_html(str(table))[0]"
+    "df = pd.read_html(str(table))[0]\n",
+    "\n",
+    "elapsed = time.time() - start_time\n",
+    "print(f\"✅ [Step 1 Complete] Retrieved S&P 500 table with {len(df)} entries in {elapsed:.2f}s.\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "69945370",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🟢 [Step 2] Starting: Extracting company Wikipedia URLs...\n",
+      "✅ [Step 2 Complete] Collected 1 Wikipedia URLs in 0.05s.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Step 2: Get company Wikipedia URLs\n",
+    "print(\"🟢 [Step 2] Starting: Extracting company Wikipedia URLs...\")\n",
+    "step2_start = time.time()\n",
+    "\n",
     "base = \"https://en.wikipedia.org\"\n",
+    "\n",
+    "# Extract links from the S&P 500 table\n",
     "links = [base + a[\"href\"] for a in table.select(\"tbody tr td:nth-of-type(2) a[href]\")]\n",
-    "links = links[:N]              # trim links list first\n",
-    "df = df.iloc[:N].copy()        # then trim df to same length\n",
-    "df[\"Wikipedia_URL\"] = links    # now they match"
+    "\n",
+    "# Limit to first N companies\n",
+    "links = links[:N]\n",
+    "df = df.iloc[:N].copy()\n",
+    "df[\"Wikipedia_URL\"] = links\n",
+    "\n",
+    "elapsed = time.time() - step2_start\n",
+    "print(f\"✅ [Step 2 Complete] Collected {len(links)} Wikipedia URLs in {elapsed:.2f}s.\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ddc2401f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🟢 [Step 3] Starting: Defining function to fetch Wikipedia intro paragraphs...\n",
+      "✅ [Step 3 Complete] Intro extraction function defined successfully in 0.00s.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"🟢 [Step 3] Starting: Defining function to fetch Wikipedia intro paragraphs...\")\n",
+    "step3_start = time.time()\n",
+    "\n",
     "# Step 3: Fetch the *intro paragraphs* directly from the article HTML\n",
     "def get_intro(url):\n",
     "    try:\n",
@@ -99,32 +134,69 @@
     "        return intro_text.strip()\n",
     "\n",
     "    except Exception as e:\n",
-    "        return f\"\""
+    "        return f\"\"\n",
+    "\n",
+    "elapsed = time.time() - step3_start\n",
+    "print(f\"✅ [Step 3 Complete] Intro extraction function defined successfully in {elapsed:.2f}s.\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "597f8b25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🟢 [Step 4] Starting: Fetching intros for all companies...\n",
+      "   ⏱️  Fetched intros for 1/1 companies...\n",
+      "✅ [Step 4 Complete] All intros fetched successfully in 0.53s.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"🟢 [Step 4] Starting: Fetching intros for all companies...\")\n",
+    "step4_start = time.time()\n",
+    "\n",
     "# Step 4: Fetch intros for all companies\n",
     "intros = []\n",
-    "for link in tqdm(df[\"Wikipedia_URL\"], desc=\"Fetching intros\"):\n",
+    "for idx, link in enumerate(df[\"Wikipedia_URL\"], 1):\n",
     "    intros.append(get_intro(link))\n",
     "    time.sleep(0.3)  # polite delay\n",
     "\n",
-    "df[\"Intro\"] = intros"
+    "    # Print status every 10 companies\n",
+    "    if idx % 10 == 0 or idx == len(df):\n",
+    "        print(f\"   ⏱️  Fetched intros for {idx}/{len(df)} companies...\")\n",
+    "\n",
+    "df[\"Intro\"] = intros\n",
+    "\n",
+    "elapsed = time.time() - step4_start\n",
+    "print(f\"✅ [Step 4 Complete] All intros fetched successfully in {elapsed:.2f}s.\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b00b403e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🟢 [Step 5] Starting: Cleaning and deduplicating data...\n",
+      "✅ [Step 5 Complete] Cleaned and deduplicated data in 0.01s. Rows before: 1, after: 1 (unique symbols)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"🟢 [Step 5] Starting: Cleaning and deduplicating data...\")\n",
+    "step5_start = time.time()\n",
+    "\n",
     "# Step 5: Clean and deduplicate data\n",
     "df = df[[\"Symbol\", \"Security\", \"Wikipedia_URL\", \"Intro\"]].copy()\n",
     "df[\"Symbol\"] = df[\"Symbol\"].astype(str).str.strip()\n",
@@ -136,23 +208,39 @@
     "df = df.drop_duplicates(subset=[\"Symbol\"], keep=\"first\").reset_index(drop=True)\n",
     "after = len(df)\n",
     "\n",
-    "print(f\"Rows before dedupe: {before}, after dedupe: {after} (unique symbols)\")"
+    "elapsed = time.time() - step5_start\n",
+    "print(f\"✅ [Step 5 Complete] Cleaned and deduplicated data in {elapsed:.2f}s. Rows before: {before}, after: {after} (unique symbols)\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a8662fe1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🟢 [Step 6] Starting: Adding ID and saving to CSV...\n",
+      "✅ [Step 6 Complete] Exported 1 rows to sp500_wiki_intros_full.csv in 0.01s.\n",
+      "   🔹 Unique symbols: 1\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"🟢 [Step 6] Starting: Adding ID and saving to CSV...\")\n",
+    "step6_start = time.time()\n",
+    "\n",
     "# Step 6: Add ID and save to CSV\n",
     "df.insert(0, \"ID\", range(1, len(df) + 1))\n",
     "out_path = \"sp500_wiki_intros_full.csv\"\n",
     "df.to_csv(out_path, index=False, encoding=\"utf-8\", quoting=csv.QUOTE_ALL)\n",
     "\n",
-    "print(f\"✅ Exported {len(df)} rows to {out_path}\")\n",
-    "print(f\"Unique symbols: {df['Symbol'].nunique()}\")"
+    "elapsed = time.time() - step6_start\n",
+    "print(f\"✅ [Step 6 Complete] Exported {len(df)} rows to {out_path} in {elapsed:.2f}s.\")\n",
+    "print(f\"   🔹 Unique symbols: {df['Symbol'].nunique()}\\n\")"
    ]
   }
  ],
